--- a/templates/paginator.html
+++ b/templates/paginator.html
@@ -1,10 +1,14 @@
 <div class = "pagination">
     <span class = "steplinks">
         {% if page.has_previous %}
-        <a href="?page={{ page.previous_page_number }}">Avvalgi</a>
+            <a href="?page={{ page.previous_page_number }}">Avvalgi</a>
         {% endif %}
         <span class="current">
             Page {{ page.number }} of {{ page.paginator.num_pages }}.
         </span>
-    </span>    
+        {% if pahe.has_next %}
+            <a href="?page={{ page.next_page_number }}">Keyingi</a>
+        {% endif %}
+    </span>
+    
 </div>
