Now you have an email from me. Go and checkup!!

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -14,7 +14,7 @@
 </div>
 <div id="sidebar">
     <h2>IT-Yangiliklar</h2>
-    <p>IT oid yangiliklar</p>
+    <p>ITga oid yangiliklar</p>
 </div>
 </body>
 </html>
